Wrote some more

--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -53,17 +53,17 @@ Early in the project, I was lucky to come across some ideas from functional prog
 
 ### Disjointness
 
-As discussed above, the models fundamentally rests on a hierarchy of data subsets organized into partitions, such that all subsets within a partition are disjoint. This is a core assumption of the model. While this assumption holds true for most common plot types, certain visualizations deviate from this model. Specifically, visualizations where geometric objects within the same graphical layer represent overlapping data subsets do not adhere to this assumption. Examples include specific visualizations of set-typed data [see e.g. @alsallakh2014] or two-dimensional kernel density plots (see Section \@ref(comparison-disjointness)). However, these non-disjoint visualizations represent only a small fraction of all available plot types. In the vast majority of "standard" plots - including barplots, histograms, scatterplots, density plots, heatmaps, violin plots, boxplots, lineplots, and parallel coordinate plots - each geometric object represents a distinct subset of cases^[As a short exercise, I tried going through `ggplot2`'s list of [`geoms`](https://ggplot2.tidyverse.org/reference/) and identifying all non-disjoint data representations. The only examples I have been able to find have been find were `geom`s based on two-dimensional kernel density estimates, i.e. `geom_density_2d` and `geom_density_2d_filled` (each line or polygon represents densities computed across all datapoints).].
+As discussed above, a core assumption of the model is that data can be organized into a hierarchy of partitions made up of *disjoint* subsets. While this assumption holds true for most common plot types, some visualizations deviate from this model, specifically those in which geometric objects within the same graphical layer represent overlapping data subsets. Examples include certain visualizations of set-typed data [see e.g. @alsallakh2014] and two-dimensional kernel density plots (see Section \@ref(comparison-disjointness)). However, these non-disjoint representations tend to be fairly rare. In the vast majority of *standard* plots - including barplots, histograms, scatterplots, density plots, heatmaps, violin plots, boxplots, lineplots, radar plots, treemaps, and parallel coordinate plots - each geometric object represents a disjoint subset of cases^[For example, I tried going through `ggplot2`'s list of [`geoms`](https://ggplot2.tidyverse.org/reference/) and identifying all non-disjoint data representations. The only examples I have been able to find have been find were `geom`s based on two-dimensional kernel density estimates, i.e. `geom_density_2d` and `geom_density_2d_filled` (each line or polygon represents densities computed across all datapoints).].
 
-In Section \@ref(comparison-disjointness), I argued that this tendency towards disjoint data representations is not a mere convention or accident, but instead stems from a fundamental naturality of disjointness. Disjointness underlies many fundamental concepts in statistics, programming, and mathematics, and, in general, seems to align better with our cognitive processes (see Section \@ref(comparison-disjointness)). Put simply, it is far easier to reason about and manipulate objects which are distinct rather than ones which are entangled [see also @hickey2011]. Therefore, I contend that disjointness is particularly well-suited to interactive data visualization. Conversely, with non-disjoint data representations, certain interactive features may become difficult or even impossible to implement. For example, how would one implement meaningful linked selection with a two-dimensional kernel density plots, without referencing the underlying (disjoint) data points? To summarize, while not the only option, I contend that disjointness provides a good default model for interactive graphics. 
+In Section \@ref(comparison-disjointness), I argued that this ubiquity of disjoint data representations is not an accident, but instead stems from a fundamental naturality. Disjointness underpins many core concepts in statistics, programming, and mathematics, and, in general, seems to align well with our cognitive processes (see Section \@ref(comparison-disjointness)). Put simply, it is far easier to reason about distinct objects, rather than ones which are entangled [see also @hickey2011]. This, I propose, make disjointness a particularly attractive feature for interactive data visualization. Conversely, with non-disjoint data representations, certain interactive features may become difficult or even impossible to implement. For example, how would one implement meaningful linked selection with a two-dimensional kernel density plots, without referencing the underlying (disjoint) data points? Thus, while not the only option, I contend that disjointness provides a good default model for interactive graphics. 
 
 ### Associativity and unitality {#associativity-unitality}
 
-The core idea of the model is preservation of the properties of set union. Among these, the two most important ones are associativity and unitality. Associativity ensures that we can perform the summary operations in any order, while unitality guarantees that empty data subsets are handled properly. Further, as discussed in Section \@ref(monoids), together, these two properties identify a central class of algebraic structures: monoids.
+The core idea of the model is preservation of the properties of set union. Among these, the two most important ones are *associativity* and *unitality*. Associativity ensures that we can perform the summary operations in any order, while unitality guarantees that empty data subsets are handled properly. Further, as discussed in Section \@ref(monoids), together, these two properties identify a central class of algebraic structures: monoids.
 
-This connection between set union and monoids is not novel. For instance, monoids have long been known to have desirable properties for parallel computing [see e.g. @parent2018; @fegaras2017; @lin2013]. As a side note, the challenges we face when visualizing data are in some ways remarkably similar to those in parallel computing: often, we want to break the data into parts, compute some summaries, and the combine these back together to yield some meaningful aggregate. More broadly, monoids are also popular functional programming [see e.g. @milewski2018], and form the basis of certain algorithms in generic programming [@stepanov2009; @stepanov2013]. Finally, monoids and other concepts from category theory have also been used in certain areas of relational database theory [see e.g. @fong2019; @gibbons2018]
+This connection between set union and monoids is not novel. For instance, monoids have long been known to have desirable properties for parallel computing [see e.g. @parent2018; @fegaras2017; @lin2013]^[As a side note, the challenges we face when visualizing data often are, in certain ways, remarkably similar to parallel computing: often, we want to break the data into parts, compute some summaries, and the combine these back together to yield meaningful aggregates]. Furthermore, more broadly, monoids are also popular functional programming [see e.g. @milewski2018], and form the basis of certain algorithms in generic programming [@stepanov2009; @stepanov2013]. Finally, monoids and other concepts from category theory have also been used in certain areas of relational database theory [see e.g. @fong2019; @gibbons2018]
 
-However, to my knowledge, I am the first to make the connection between monoids and many popular visualization types. As discussed in Section \@ref(visualization-category-theory), while there has been some limited number of applications of category theory to data visualization, the way I have used category-theoretic concepts differs significantly from all of these. On one hand, it is significantly more applied than some other past applications [see e.g. @beckmann1995; @hutchins1999; @vickers2012], due to the fact that it relates to concrete statistics, geometric objects, and interactive features, rather than broad ideas about the nature of the visualization process. On the other hand, it is also more theoretical than other applications, since it does not require any specific implementation; the work presented in this thesis is not a functional programming library. During my survey of the data visualization literature, I did not find any references explicitly linking common plot types such as barplots or histograms to groups and monoids. The only hints of similar ideas I have been able to find has been in the documentation of Crossfilter, a JavaScript library for exploring large multi-dimensional data sets [@crossfilter2023; @crossfilter2025]. However, this documentation only discusses properties like associativity and commutativity, without connecting them to algebraic structures.
+However, to my knowledge, I am the first to make the connection between monoids and popular visualization types. As discussed in Section \@ref(visualization-category-theory), while there has been some limited number of applications of category theory to data visualization, the way I have used category-theoretic concepts differs significantly from all of these. On one hand, it is significantly more applied than some other applications [see e.g. @beckmann1995; @hutchins1999; @vickers2012], due to the fact that it relates to concrete statistics, geometric objects, and interactive features, rather than broad ideas about the nature of the visualization process. On the other hand, it is also more theoretical than other applications, since it does not require any specific implementation; the work presented in this thesis is not a functional programming library. During my survey of the data visualization literature, I did not find any references explicitly linking common plot types such as barplots or histograms to groups and monoids. The only hints of similar ideas I have been able to find has been in the documentation of Crossfilter, a JavaScript library for exploring large multi-dimensional data sets [@crossfilter2023; @crossfilter2025]. However, this documentation only discusses properties like associativity and commutativity, without connecting them to algebraic structures.
 
 Associativity and unitality have some interesting implications for data visualization systems. Firstly, due to the previously mentioned connections to parallel computing, associativity suggests that a data visualization system built around monoids can be easily parallelized. This enables improved performance and makes it suitable for distributed computing. Secondly, unitality also has interesting consequences. Specifically, it ensures that empty data subsets have unambiguous representations, and, conversely, lack of unitality may cause ambiguities. For example, the average operator is not unital, since the average of an empty set is not defined. This can create issues when visualizing data, such as drawing a bar plot where some categories are empty. While we might choose to omit bars for empty categories, this leads to an ambiguous representation, such that absence of a bar can indicate one of two things: either there were *no* cases in the category and their average is undefined, or there *were* cases and their average was equal to the y-axis intercept. In contrast, since the sum is unital, the representation is always clear: a missing bar unambiguously indicates a sum of zero, regardless of whether there were cases in the category or not. This also provides a potential alternative perspective on a perennial debate in data visualization: should the base of the barplot always start at zero or not [see e.g. @cleveland1985; @wilkinson2012]? Since the monoidal unit represents the default state of "no data", it can serve as the default choice for the base, such that, for example, a barplot of products may have one as its base.  
 
@@ -81,13 +81,13 @@ Whether to choose groups or monoids as the foundational algebraic model for obje
 
 ### Additional properties: Monotonicity, commutativity, and others
 
-Beyond associativity, unitality, and inverses, set union possesses several other algebraic properties that may be useful to preserve in specific contexts. While I consider these somewhat less essential, as their absence does not inherently invalidate the part-whole model (discussed throughout Section \@ref(problems)), they can still offer certain advantageous in specific circumstances. Consequently, I believe their discussion here is warranted.
+Beyond associativity, unitality, and inverses, set union possesses several other algebraic properties that may be useful to preserve in specific contexts. While I consider these somewhat less essential, as their absence does not inherently invalidate the part-whole model (discussed throughout Section \@ref(problems)), they can still be advantageous in specific circumstances. Consequently, I believe their discussion here is warranted.
 
-Of these additional properties of set union, monotonicity and associativity are, in my view, the two most significant (see Section \@ref(monotonicity-commutativity)). First, let's discuss monotonicity. In the context of set union, monotonicity implies that the cardinality of the union of two subsets is always greater than or equal to the cardinality of either subset: $\lvert A \cup B \rvert \geq \lvert A \rvert \land \cup B \rvert \geq \lvert B$. Therefore, it seems reasonable that our summary statistics should also perhaps exhibit this property, yielding greater values when summarizing larger data subsets. And indeed, monotonicity is often useful since many geometric objects also exhibit unidirectional growth: bars increase in height, circles expand in radius, and so forth. However, there are also some geometric representations which can depict additive changes in negative directions. For instance, as discussed in Section \@ref(monotonicity-commutativity), a polyline composed of vector segments can simultaneously "grow" in positive and negative directions along the x- and y-axes, through the addition of vectors with negative components. This means that, for depicting objects composed of parts, monotonicity is not strictly required, however, it does align with many common geometric object types such as bars or circular areas, and can also have certain other benefits, for instance for simplifying the calculation of axis limits (see Section \@ref(monotonicity-commutativity)). 
+Of these additional properties of set union, monotonicity and commutativity are, in my view, the two most important ones (see Section \@ref(monotonicity-commutativity)). In the context of set union, *monotonicity* implies that the cardinality of the union of two subsets is always greater than or equal to the cardinality of either subset: $\lvert A \cup B \rvert \geq \lvert A \rvert \land \cup B \rvert \geq \lvert B$. Therefore, it seems reasonable that our summary statistics should also perhaps exhibit this property, yielding greater values when summarizing larger data subsets. Indeed, this property is useful because many geometric objects also exhibit unidirectional growth: bars increase in height, circles expand in radius, and so forth. However, there are also some geometric representations which can depict additive changes in negative directions. For instance, as discussed in Section \@ref(monotonicity-commutativity), a polyline composed of vector segments can simultaneously "grow" in positive and negative directions along the x- and y-axes. Thus, for depicting objects composed of parts, monotonicity is not strictly required, however, it does align well with many common geometric objects, and can also have certain other benefits, for instance for simplifying the calculation of axis limits (see Section \@ref(monotonicity-commutativity)).
 
-Second, as for commutativity, an operation is commutative if the order of the elements does not matter. For set union, this is always the case, by definition: sets are unordered collections, and, as such, $A \cup B = B \cup A$. However, in applied data analysis, data is frequently stored in two-dimensional tables with an inherent row order, and this can sometimes influence data summaries and their visual representation. For instance, lineplots are typically non-commutative: given that a line connects multiple points, different row arrangements will yield visually distinct lines^[Where appropriate, the issue can be mitigated by sorting the data points by the x-axis variable.]. Furthermore, certain plot types may be commutative in some systems and not others. For example, while most systems render barplot and histogram highlighting commutatively - representing highlighted cases as a single segment at the base - some systems highlight individual cases as lines, potentially creating diffuse, striped patterns (see, for example, Figure \@ref(fig:xlisp-stat)). Regarding summary statistics, while many common operators such as sums, averages, or maxima are commutative, there also are some examples of non-commutative monoids, such as string concatenation and matrix multiplication, which could, hypothetically, be used for summaries. Overall, commutativity generally appears to be desirable, as it renders row order unimportant, thereby reducing cognitive load and offering potential advantages in the context of distributed computing or resampling techniques (e.g. bootstrapping).
+Second, an operation is *commutative* if the order of the elements does not matter. For set union, this is always the case, by definition: sets are unordered collections, and, as such, $A \cup B = B \cup A$. However, in applied data analysis, data is frequently stored in two-dimensional tables with an inherent row order. This can influence data summaries and their visual representation. For instance, lineplots are often non-commutative: given that a line connects multiple points, different row arrangements will yield visually distinct lines^[Unless sorted by the x-axis variable; compare `geom_line` and `geom_path` in `ggplot2`, [@wickham2016].]. Furthermore, certain plots may be commutative in some systems and not others. For example, barplot and histogram highlighting is often implemented commutatively - the highlighted cases are merged into a single segment at the bar's base - some systems highlight individual cases, creating diffuse, striped patterns (see, for example, Figure \@ref(fig:xlisp-stat)). Regarding summary statistics, while many common operators such as sums, averages, or maxima are commutative, there also are some examples of non-commutative monoids, such as string concatenation and matrix multiplication, which could, hypothetically, be used for summaries. Overall, commutativity generally appears to be desirable, as it renders row order unimportant, thereby reducing cognitive load and offering potential advantages in the context of distributed computing or resampling techniques (e.g. bootstrapping).
 
-Finally, there are few other properties of set union which, in my view, are less important but which it may be useful to briefly touch on here. The first is idempotence. Given any set $A$, the union of that set with itself is itself, $A \cup A = A$. While some statistical operators, such as minimum, maximum, and convex hull, exhibit this property, I have not identified a specific use case for it in graphics, interactive or otherwise. Second, just as the monoidal neutral element corresponds to the empty set ($\varnothing$, such that $A \cup \varnothing = A$), there may also be a so-called terminal element or object [see e.g. @fong2019] that behaves like the universal set $\Omega$ under union, such that $A \cup \Omega = \Omega$. For instance, in the case of sums, products, or maximums, our data may contain special $\infty$ or `Inf` value, which, when combined with any other value, is always yielded back: $x + \infty = x \cdot \infty = \max(x, \infty) = \infty$ for all $x$. Similarly, the special missing value `NA` in R also behaves somewhat like the terminal element for many operations^[Although going by precise category-theoretic definitions, introducing missing values or `NA`'s does create some problems: by definition, the terminal element is always unique, so `NA` and `Inf` would either have to be isomorphic (both be "the" terminal object), or only one of them could be (based on R's implementation, this would be `NA` since e.g. `NA * Inf == NA`).]. The terminal element could hypothetically be useful for more efficient aggregation, due to the fact that, once we encounter it, we can terminate the aggregation loop. However, I have not been able to think of any examples, beyond trivial ones^[E.g. logical conjunction and disjuction with $\text{FALSE}$ and $\text{TRUE}$], where the terminal element would be easily and generally representable by graphics (for instance, how do we represent a bar of height $\infty$?), and, as such, the utility of this hypothetical optimization is debatable^[Further, checking for the terminal element would require adding a branching (`if`) statement inside the body of the aggregation loop. In performance-critical code sections, branching can introduce performance bottlenecks, especially when the branching condition is hard to predict [see e.g. @fabian2018]. Although terminal values may occur infrequently (a data set may not have any), making branching fairly predictable, it may still be more efficient, on balance, to simply aggregate over all data, even if it includes terminal values.]. Lastly, set union distributes over set intersection. However, the relation of set intersection to the part-whole object model is not clear, particularly when the parts are disjoint subsets. An analogue to set intersection would require that the summary statistic has a complementary binary operation, distinct from an inverse (which is identified with set difference, see \@ref(discussion-groups-inverses)), which would need to distribute over the primary aggregation operation. Furthermore, unlike inverses and neutral elements, this complementary distributive operation does not need to be unique (for instance, maximum distributes over both products and minimums). As such, I do not really see a benefit in identifying such operation.
+Finally, there are few other properties of set union which, in my view, are less important but which it may be useful to briefly touch on here. The first is idempotence. Given any set $A$, the union of that set with itself is itself, $A \cup A = A$. While some statistical operators, such as minimum, maximum, and convex hull, exhibit this property, I have not identified a specific use case for it in graphics, interactive or otherwise. Second, just as the monoidal neutral element corresponds to the empty set ($\varnothing$, such that $A \cup \varnothing = A$), there may also be a so-called terminal element or object [see e.g. @fong2019] that behaves like the universal set $\Omega$ under union, such that $A \cup \Omega = \Omega$. For instance, in the case of sums, products, or maximums, our data may contain special $\infty$ or `Inf` value, which, when combined with any other value, is always yielded back: $x + \infty = x \cdot \infty = \max(x, \infty) = \infty$ for all $x$. Similarly, the special missing value `NA` in R also behaves somewhat like the terminal element for many operations^[Although going by precise category-theoretic definitions, introducing missing values or `NA`'s does create some problems: by definition, the terminal element is always unique, so `NA` and `Inf` would either have to be isomorphic (both be *the* terminal object), or only one of them could be (based on R's implementation, this would have to be `NA` since e.g. `NA * Inf == NA`).]. The terminal element could hypothetically be useful for more efficient aggregation, due to the fact that, once we encounter it, we can terminate the aggregation loop. However, I have not been able to think of any examples, beyond trivial ones^[E.g. logical conjunction and disjuction with $\text{FALSE}$ and $\text{TRUE}$], where the terminal element would be easily and generally representable by graphics (for instance, how do we represent a bar of height $\infty$?). As such, the practical utility of this hypothetical optimization is debatable^[Further, checking for the terminal element would require adding a branching (`if`) statement inside the body of the aggregation loop. In performance-critical code sections, branching can introduce performance bottlenecks, especially when the branching condition is hard to predict [see e.g. @fabian2018]. Although terminal values may occur infrequently (a data set may not have any), making branching fairly predictable, it may still be more efficient, on balance, to simply aggregate over all data, even if it includes terminal values.]. Lastly, set union distributes over set intersection. However, the relation of set intersection to the part-whole object model is not clear, particularly when the parts are disjoint subsets. An analogue to set intersection would require that the summary statistic has a complementary binary operation, distinct from an inverse (which is identified with set difference, see \@ref(discussion-groups-inverses)), which would need to distribute over the primary aggregation operation. Furthermore, unlike inverses and neutral elements, this complementary distributive operation does not need to be unique (for instance, maximum distributes over both products and minimums). As such, I do not really see a benefit in identifying such operations.
 
 ### Model constraints
 
