--- a/system.Rmd
+++ b/system.Rmd
@@ -1133,9 +1133,9 @@ However, before delving into this interface, let's first discuss some important 
 
 ##### Transient vs. persistent selection {#transient-persistent}
 
-A key concept in the implementation of `Marker` is the distinction between transient and persistent selection [see also @urbanek2011]. By default, `plotscape` plots are in transient selection mode, meaning that linked selection operations (e.g. clicking, clicking-and-dragging) assign cases the transient selection status. This transient selection status is cleared by subsequent selection events, as well as many other interactions including panning, zooming, representation switching, and change of parameters. To make the results of selection persist across these interactions, the user can assign cases to persistent selection groups (currently, this is down by holding down a numeric key and performing regular selection). Persistent selections are removed only by a dedicated action (double-click).
+A key concept related to `Marker` is the distinction between transient and persistent selection [see also @urbanek2011]. By default, all `plotscape` plots are in transient selection mode, meaning that linked selection operations (e.g. clicking, clicking-and-dragging) assign cases transient selection status. This transient selection status is cleared by subsequent selection events, as well as many other interactions including panning, zooming, representation switching, and change of parameters. To make the results of selection persist, the user can assign cases to persistent selection groups (currently, this is done by holding down a numeric key and performing regular selection). Persistent selections are removed only by a dedicated action (double-click).
 
-Importantly, a single data point can be simultaneously assigned to a persistent group *and* also be transiently selected. For example, a data point may belong to the base (unselected) group, transiently selected base group, persistent group one, transiently selected persistent group one, and so on. This means that `plotscape` has a very minimal version of selection operators [see @unwin1996; @theus2002] baked-in: transient and persistent selection are automatically combined via intersection (the `AND` operator). While a full range of selection operators provides much greater flexibility, I contend that this simple transient-persistent model already provides a lot of practical utility. Specifically, it enables a common action in the interactive data visualization workflow: upon identifying an interesting trend with selection, a user may be interested in how the trend changes when conditioning on *another* (`AND`) subset of the data. The transient-persistent model makes this possible, without introducing the overhead having to learn how to use various selection operators. 
+Importantly, a single data point can be simultaneously assigned to a persistent group *and* also be selected transiently. For example, a data point may belong to the base (unselected) group, transiently selected base group, persistent group one, transiently selected persistent group one, and so on. In other words, `plotscape` implements a very basic version of selection operators [see @unwin1996; @theus2002]: transient and persistent selection are automatically combined via intersection (the `AND` operator). While a full range of selection operators would provide much greater flexibility, I contend that this simple transient-persistent model already provides a lot of practical utility. Specifically, it enables the following interactive data visualization workflow: after marking an interesting trend with persistent selection, a user may inquire about how the trend changes when conditioning on *another* (`AND`) subset of the data, via transient selection. The transient-persistent model makes such workflow possible, without introducing the cognitive overhead having to learn multiple selection operators. 
 
 ```{r transient-persistent-product}
 #| echo: false
@@ -1143,11 +1143,11 @@ Importantly, a single data point can be simultaneously assigned to a persistent 
 knitr::include_graphics("./figures/transient-persisent-product.png")
 ```
 
-Final thing to note is that, during rendering, transient selection status is represented by paired colour shades, see Figure \@ref(fig:transient-persistent-product). That is, each persistent selection group is assigned a unique color, and transient selection is indicated by a darker shade of the same color. This pairing clearly visually differentiates the two selection modes while preserving the identity of the persistent groups.
+Final thing to note is that, during rendering, selection status is represented by paired colour shades, see Figure \@ref(fig:transient-persistent-product). That is, each persistent selection group is assigned a unique hue, and transient selection is indicated by a darker shade of the same hue. This colour pairing clearly visually differentiates the two selection modes, while preserving the relatedness of the persistent groups.
 
 ##### Group assignment indices {#group-indices}
 
-The key responsibility of `Marker` is to manage linked selection status (the transient-persistent model discussed in Section \@ref(transient-persistent) above). It does this very similarly to a `Factor`, by maintaining an array of group assignment `indices`. In `plotscape`, each data point can be assigned one of four primary (persistent) groups based on linked selection: base (no selection), persistent selection group one, persistent selection group two, and persistent selection group three. Further, as also discusssed above, each of those groups can be further split in two based on transient selection state (selected or unselected), resulting in $4 \times 2 = 8$ distinct group assignments (such that the `cardinality` of `Marker` is always 8). These group assignments are coded into indices as follows:  
+The key responsibility of `Marker` is to manage linked selection status (the transient-persistent model discussed in Section \@ref(transient-persistent) above). It does this very similarly to a `Factor`, by maintaining an array of group assignment `indices`. Currently, in `pltotscape`, each data point can be assigned one of four primary persistent groups based on linked selection: base (no selection), persistent selection group one, persistent selection group two, and persistent selection group three. Further, as also discusssed above, each of those groups can be further split in two based on transient selection state (selected or unselected), resulting in $4 \times 2 = 8$ distinct group assignments. These group assignments are coded into indices as follows:  
 
 ```{r index-table}
 #| echo: false
@@ -1165,7 +1165,7 @@ As you can see from Table \@ref(tab:index-table), selection groups are mapped to
 
 With four persistent groups (including base), many operations involving transient selection can be efficiently implemented using the third bit of the index. Specifically, as can be seen in Table \@ref(tab:index-table), persistent indices range from 0 to 3 and transient indices range from 4 to 7. Thus, to determine whether a case is selected, we can do a simple bitwise check of the third bit. Likewise, to add or remove transient selection, we can set the third bit appropriately. 
 
-It is important to mention that, while not a necessity, having four persistent groups works well when for the main purpose of `Marker`s: taking products with other factors. With four groups, the number of unique group assignments is eight and the maximum index values is `2^3 - 1 = 7`, resulting in dense `Marker` indices (i.e. all index values from 0 to `cardinality - 1` are valid). If we wanted to implement more persistent selection groups, we could do so by setting a higher bit (e.g. the fourth bit for up to eight persistent groups and sixteen unique indices in total), however, we may break the correspondence between cardinality and the number of unique indices. Practically, this may not cause any issues, as long as we ensure that the `Marker` cardinality is set to $2^{\text{index of the transient bit}}$ which may be different from the number of unique indices. However, I argue that, in most circumstances, four persistent selection groups are enough. It is well-known that human visual capacity is limited, and having more than $4 \times 2 = 8$ different group assignments represented by different colors within the same figure may overtax the visual system. Still, the ability to have arbitrary number of persistent groups may be implemented in future versions in `plotscape`, but it has not been a priority up to this point.
+Currently, transient selection is hardcoded to use the third bit, however, it should not be too difficult to raise the index to a higher bit so that more persistent selection groups can be included. For instance, raising the index up to fourth bit would enable up to eight persistent groups, raising it to the fifth bit would enable up to sixteen persistent groups, and so on. The cardinality of `Marker` would then have to be set to $2^k$ where $k$ represents the index of the transient bit. There is something to be said for keeping the number of persistent groups at $2^k / 2$, since this preserves a correspondence between the `Marker`'s cardinality and the group assignment indices: when the number of persistent groups is $2^k / 2$, then all indices from 0 to `cardinality - 1 = 2^k - 1` are valid (this also makes the `Marker`'s behavior more consistent with that of a `Factor`). On a different note, having too many persistent groups could also have some drawbacks. Since transient selection effectively doubles the number of colors, high numerosity of selection groups could overtax the user's visual system, and, with too many hues, finding a paired color palette with good visual properties could become difficult. Either way, more persistent selection groups may be implemened in future versions of `plotscape`, however, this has not been a priority up to this point.
 
 ##### Updating group assignment indices
 
@@ -1803,15 +1803,15 @@ Currently, each `Plot` in `plotscape` uses the following list of aesthetic mappi
 - area
 - area percentage (`areaPct`)
 
-Most of these are fairly self-explanatory. Tmap data to the plot's x and y coordinates, respectively. Their `codomain` maxima correspond to the plot's width and height (ignoring margins). The `size` scale maps to glyph sizes, like scatterplot points. By default, it is a ratio scale (minimum is fixed at zero, for both `domain` and `codomain`), uses a square-root transformation, and has a fixed maximum^[With respect to the dimensions of the plot; it can still be modified by interaction.]. The `width` and `height` scales correspond to the plot's dimensions, similar to `x` and `y`, however, with the minimum value fixed at zero and both margins subtracted from the maximum. They are used, for instance, to scale the width and height of barplot bars, semi-independently^[`width` and `height` are not truly independent of `x` and `y` due to e.g. zooming having to affect both] of position. The `area` scale is based on the minimum of `width` and `height` and also has a square-root transformation applied to it. Finally, the `areaPct` scale is a scale used for scaling fixed-coordinate objects (e.g. for growing/shrinking rectangles in a 2D histogram). 
+Most of these are fairly self-explanatory. The *x* and *y* scales map data to the plot's x and y coordinates, respectively. Their `codomain` maxima correspond to the plot's width and height (ignoring margins). The *size* scale maps values to sizes of glyphs such as scatterplot points. By default, it is a ratio scale (minimum is fixed at zero, for both `domain` and `codomain`), with a square-root transformation and a fixed maximum^[With respect to the dimensions of the plot; it can still be modified by interaction.]. The *width* and *height* scales are derived from the plot's dimensions, similar to x and y scales, however, their minima are fixed at zero and both margins are instead subtracted from the maxima. They are used, for instance, to scale the width and height of barplot bars, semi-independently of position^[They are not truly independent since e.g. zooming affects both.]. The `area` scale is based on the minimum of `width` and `height` and also has a square-root transformation applied to it. Finally, the `areaPct` scale is a scale used for scaling the area of fixed-coordinate objects (e.g. for growing/shrinking rectangles in a 2D histogram). 
 
-Most of the scales (excluding `size` and `areaPct`) are automatically adjusted when the plot is resized. They may be also modified by user events such as zooming, panning, or shrinking/growing the size of objects. All scales are also provided default values which are reverted to when the reset event is triggered. This is all orchestrated by `Plot`.
+Most scales (excluding `size` and `areaPct`) are automatically adjusted when the plot is resized. They may be also modified by user events such as zooming, panning, or shrinking/growing the size of objects (these typically affect the `zero` and `one` parameters of the scale - see Section \@ref(scales)). All scales are also provided with default values upon initialization, and these are reverted to when reset event is triggered.
 
-Finally, it is crucial to note that in many concrete plot types, scales are trained on data computed at a coarser partition level (representing whole objects), rather than the finest partition level (representing object segments). For example, in histograms, scales for the x- and y-axes are trained on data corresponding to whole bins, not the product of bins and `Marker` status. This approach significantly enhances rendering efficiency, as scale and axis updates are only required when, for instance, bin widths change, rather than each time selection occurs. As discussed in Section \@ref(aggregation-category-theory), this requires making certain algebraic assumptions, namely that the computed summaries are monoidal and monotonic. While this is currently a hard-coded requirement, a potential future direction would be to provide a fallback mechanism such that the scale updates would be based on the finest partition when the summaries are not monoidal monotones.
+Finally, it is important to note that in many plot types, scales are trained on data computed at a coarser partition level (representing whole objects), rather than the finest partition level (representing object segments). For instance, in histograms, scales for the x- and y-axes are trained on data corresponding to whole bins, not the product of bins and `Marker` status. This approach is more efficient, as scale and axis updates are only required when, for instance, bin widths change, rather than each time selection occurs. As discussed in Section \@ref(aggregation-category-theory), this requires making certain algebraic assumptions, namely that the computed summaries are monoidal and monotonic. While this is currently a hard-coded requirement, in the future, a potential direction could be to provide a fallback mechanism such that the scale updates would be based on the finest partition when the summaries are not monoidal monotones.
 
 ##### Rendering {#plot-rendering}
 
-Intuitively, every `Plot` needs a dedicated space for rendering data and auxiliary graphical elements such as axis labels and titles. This requires the ability to render basic geometric objects, such as points, lines, rectangles, and text. Furthermore, as discussed in Section \@ref(frames), rendering can be simplified and optimized by organizing objects into vertical layers (z-indices). Therefore, our `Plot` implementation should support this layering capability.
+Intuitively, every `Plot` needs a dedicated space to render the data and auxiliary graphical elements such as axis labels and titles. This requires the ability to render basic geometric objects, such as points, lines, rectangles, and text. Furthermore, as discussed in Section \@ref(frames), rendering can be simplified and optimized by organizing objects into vertical layers (z-indices). Therefore, our `Plot` implementation should support this layering capability.
 
 Currently, `Plot` utilizes a dictionary of `Frame` subcomponents for rendering. A `Frame` is essentially a wrapper around the HTML `canvas` element, providing additional utility functions related resizing, clipping, and rendering of graphical primitives. During data rendering, the appropriate `Frame` is selected based on a provided layer value, and the data is rendered accordingly. Finally, each `Frame` can also have associated attributes, such as color (for selection groups), margins, or opacity.
 
@@ -1863,13 +1863,13 @@ Additionally, every `Plot` can be zoomed into multiple levels deep. This nested 
 
 #### Scene {#scene}
 
-As discussed in Section \@ref(api-design), a key part of an interactive system design is the ability to create and manage figures composed of multiple (connected) interactive plots. In `plotscape`, this responsibility is handled by the `Scene` component, making it a view-controller event, similar to `Plot` but more high-level (see Section \@ref(plot)). Again, as with the `Plot` component, the design involves a number of implementation details which will only be glossed over in this section; an interested reader is refered to the `plotscape` codebase. Finally, similar to `Plot`, due to its direct ties to UI, `Scene` is another component that may make sense to be implemented as an OOP class. 
+As discussed in Section \@ref(api-design), a key part of an interactive system design is the ability to create and manage figures composed of multiple (connected) interactive plots. In `plotscape`, this responsibility is handled by the `Scene` component. Thus, like `Plot`, `Scene` is a view-controller type component but more high-level (see Section \@ref(plot)). Again, as with the `Plot` component, the design involves a number of implementation details which will only be glossed over in this section; an interested reader is refered to the `plotscape` codebase. Finally, similar to `Plot`, due to its direct link to UI, `Scene` is another component that may make sense to be implemented as an OOP class. 
 
 ##### Plots
 
-The primary responsibility of `Scene` is to serve as a container for `Plot`s. These are stored in a simple dynamic array which grows as more plots are added to a `Scene`. Further, to speed up look-ups of individual plots, plot references may also be stored in a dictionary. In current version of `plotscape`, this dictionary stores plot types as keys and arrays of plot references as values, such that, e.g., all histograms are stored under the `histo` key of the dictionary. When new plots are added, they are appended to the array as well as the dictionary, and also automatically subscribed to the `Scene` events.
+The primary responsibility of `Scene` is to serve as a container for `Plot`, storing them in a dynamic array for efficient iteration and a dictionary of arrays for quick lookups (as JavaScript objects, both are stored as references). Currently, the dictionary is organized by plot type, such that, e.g., all histograms are stored under the `histo` key of the dictionary. New plots added to `Scene` are appended to both the array and the dictionary, and automatically subscribed to `Scene` events.
 
-On the DOM side, the `Scene` has a `container` property into which the containers of the individual plots are placed. This container is a simple `div` element which by default uses the CSS `grid` layout. When new plots are added, the dimensions of this layout are automatically updated to preserve a roughly square shape, using the following formulas to calculate the number of rows and columns:
+On the DOM side, the `Scene` has a `container` property into which the HTML elements of individual plots are placed. This container is a simple `div` element which uses the CSS `grid` layout by default. When new plots are added, the dimensions of the layout are automatically adjusted to preserve a roughly square shape, using the following formulas to calculate the number of rows and columns:
 
 - $\text{number of columns} = \lceil \sqrt{ \text{number of plots}}  \rceil$
 - $\text{number of rows} = \lceil (\text{number of plots}) / (\text{number of columns}) \rceil$
@@ -1882,17 +1882,17 @@ As mentioned before in Section \@ref(marker), the `Marker` is shared between plo
 
 ##### WebSockets client
 
-To facilitate two-way communication with an external server, the `Scene` component also maintains a WebSockets client [@mdn2024g]. This client is created during `Scene` initialization, using a URL which either has a default value or may be provided as part of the `Scene` initialization options. The `Scene` subscribes to this client and manages all incoming and outgoing messages via dedicated event handler functions. Messages sent to and from the client are encoded as JSON and contain sender, target, and event type information, along with optional data.
+To facilitate two-way communication with an external server, the `Scene` also contains a WebSockets client object [@mdn2024g]. This client is initialized and connects to the server using a provided URL upon `Scene` initialization. The `Scene` subscribes to this client and manages all incoming and outgoing messages via dedicated handler functions. All messages are JSON-encoded and contain metadata such as the sender, target, event type, and additional data.
 
 ##### Events and Keybindings
 
-`Scene` additionally manages listening and forwarding of events from multiple source. These include plots, the `Marker`, the WebSockets client, and global user inputs, particularly keyboard events. The `Scene` is responsible for propagating and synchronizing these events across its properties.
+`Scene` additionally handles listening to and forwarding of events from multiple sources. These include events from the plots, the `Marker`, the WebSockets client, and global user inputs (particularly keyboard events). The `Scene` is responsible for propagating and synchronizing these events across its members.
 
 The list of events managed by the `Scene` includes the following, categorized for clarity:
 
 - **Layout management**: set dimensions, set layout, clear layout, resize (scene and all plots)
 - **Selection**: clear all selection, clear transient selection, set transient indices, assign permanent indices, query transient indices, query permanent indices (both return an array)
-- **Plot management**: add/remove a plot, pop the array of plots (remove the last added plot), activate/deactivate a plot, deactivate all plots, reset all plots to default values, zoom into a specific region of a plot, normalize a plot (e.g. barplot to spineplot), query a plot's scale (returns a JSON)
+- **Plot management**: add/remove a plot, pop the array of plots (remove the last added plot), activate/deactivate a specific plot, deactivate all plots, reset all plots to default values, zoom into a specific region of a plot, normalize a plot (e.g. barplot to spineplot), query a plot's scale (returns a JSON)
 
 Further, some of these events are tied to `KeyboardEvent`s on the `window` object. While default keybindings are provided, users can interactively reassign them using a keybindings widget located in the top-right corner of the `Scene` container.
 
