--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -18,9 +18,9 @@ Naturally, statisticians would eventually come to exploit this connection betwee
 
 The power of interactive data visualization quickly established it as one of the most popular ways of presenting data. Today, interactive graphics make frequent appearance in online news articles, on government websites, and in commercial dashboards. Similarly, data science developer ecosystems are flush with software for creating interactive graphics. Thus, given its ubiquity, it may seem as though interactive data visualization is a "solved problem".
 
-Yet, a number of unresolved issues surrounding the use and understanding interactive figures remain. While favored by large organization, individual analysts rarely integrate interactive data visualization into their workflows [see e.g. @batch2017]. Further, despite years of research and development into sophisticated interactive features, only a small fraction of them make it into widely available, general software (see Section \@ref(background)). Finally, a core underlying issue that remains to be solved is that of data pipelines: how do we go about modeling process of transforming raw data into something that can be interactively visualized, in a simple and efficient manner [see e.g. @wickham2009; @vanderplas2020]?
+Yet, a number of unresolved issues surrounding the use and understanding interactive figures remain. While favored by large organizations, individual analysts rarely integrate interactive data visualization into their workflows [see e.g. @batch2017]. Further, despite years of research and development into sophisticated interactive features, only a small fraction of them make it into widely available, general software (see Section \@ref(background)). Finally, a core underlying issue that remains to be solved is that of data pipelines: how do we go about modeling the process of transforming raw data into something that can be interactively visualized, in a simple and efficient manner [see e.g. @wickham2009; @vanderplas2020]?
 
-In this thesis, I explore these gaps the challenges that come up when developing interactive data visualization systems. A recurring theme will be that, although plots are visual entities composed of geometric objects, they are not mere pictures. Instead, they contain a significant amount of implicit, algebraic structure, which becomes particularly relevant when interaction is introduced. By focusing on the this algebraic foundation, I build upon the work of Leland Wilkinson, and the Grammar of Graphics (GoG) model in particular [-@wilkinson2012]. However, I contend that while GoG offers a foundational framework, to fully encompass the scope of interactive graphics it may require certain refinements. To put it bluntly, consider the following two quotes:
+In this thesis, I explore the challenges that come up when developing interactive data visualization systems. A recurring theme will be that, although plots are visual entities composed of geometric objects, they are not mere pictures. Instead, they contain a significant amount of implicit, algebraic structure, which becomes particularly relevant when interaction is introduced. By focusing on this algebraic foundation, I build upon the work of Leland Wilkinson, and the Grammar of Graphics (GoG) model in particular [-@wilkinson2012]. However, I contend that while GoG offers a foundational framework, to fully encompass the scope of interactive graphics it may require certain refinements. To put it bluntly, consider the following two quotes:
 
 > "This system cannot produce a meaningless graphic, however. This is a strong claim, vulnerable to a single counter-example. It is a claim based on the formal rules of the system, however, not on the evaluation of specific graphics it may produce."
 >
@@ -32,9 +32,9 @@ What makes some combinations of graphics and statistics meaningful, while others
 
 The main thrust of my argument is that what we can *do* with a graphic is fundamentally determined what the graphics *is*, and summary statistics are an inseparable part of that. Specifically, certain types of plots exhibit a special congruence between data, summary statistics, and visuals, which ensures predictable behavior under interaction. Other types of plots break this congruence, making certain interactive features challenging to implement. Exploring this congruence is one of the main tasks of the present thesis. To describe it formally, I propose a simple model leveraging some fundamental algebraic concepts from category theory [see e.g. @fong2019]. Importantly, these concepts, and my application of them, extends beyond GoG [@wilkinson2012]. Specifically, while GoG treats data, statistics, and graphics as entirely independent, modular components, I instead propose a compositional model which focuses on preserving key mathematical properties.
 
-Finally, since interactive data visualization is a very much an applied discipline, developing theory would be pointless if it did not lead to practical, actionable insights. Therefore, to validate and refine the theoretical findings, I also develop an original open-source interactive data visualization library, `plotscaper` (https://github.com/bartonicek/plotscaper). Consequently, parts of this thesis are dedicated to the design and architecture of this system, as well as its application to real-world data. Throughout these sections, I repeatedly explore and elaborate on the connections between the mathetmatical theory and its practical application. 
+Finally, since interactive data visualization is a very much an applied discipline, all this theory would be pointless if it did not lead to practical, actionable insights. Therefore, to validate and refine the theoretical findings, I also develop an original open-source interactive data visualization library, `plotscaper` (https://github.com/bartonicek/plotscaper). Consequently, parts of this thesis are dedicated to the design and architecture of this system, as well as its application to real-world data. Throughout these sections, I repeatedly explore and elaborate on the connections between the mathetmatical theory and its practical application. 
 
-Ultimately, I contend that, to build truly general and efficient interactive data visualization systems, we need to take the underlying algebraic relationships into account. Only by properly describing what a plot *is* can we begin to reason about what we can *do* with it.
+Ultimately, I contend that, to build truly general and efficient interactive data visualization systems, we need to take the underlying algebraic relationships into account. Only by precisely describing what a plot *is* can we begin to reason about what we can *do* with it.
 
 #### Structure of the thesis
 
